--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "lucide-react": "^0.331.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
