--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.14.1",
     "@formspree/react": "^2.5.1",
+    "custom-error": "^0.2.1",
     "gh-pages": "^6.1.1",
     "lucide-react": "^0.331.0",
+    "mammoth": "^1.7.1",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
   },
